--- a/quiz.html
+++ b/quiz.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Quiz</title>
-  <link rel="stylesheet" href="quiz.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="old-paper">
+  <header class="header">
+    <div class="header-row">
+      <div class="header-col">
+        <h1 class="blog-header-logo">Alash</h1>
+      </div>
+    </div>
+    <ul class="nav">
+      <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="history.html" class="nav-link" >History</a></li>
+      <li class="nav-item"><a href="members.html" class="nav-link">Members</a></li>
+
+    </ul>
+  </header>
+
   <div class="quiz-container">
     <h1>HTML & CSS Quiz</h1>
     <form id="quiz-form">
