--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                 </div>
               </div>
           <ul class="nav nav-pills justify-content-center">
-            <li class="nav-item"><a href="history.html" class="nav-link" >History</a></li>
+            <li class="nav-item"><a href="story.html" class="nav-link" >History</a></li>
             <li class="nav-item"><a href="members.html" class="nav-link">Members</a></li>
             <li class="nav-item"><a href="quiz.html" class="nav-link">Quiz</a></li>
           </ul>
