--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
     </div>
     <ul class="nav">
       <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-      <li class="nav-item"><a href="history.html" class="nav-link" >History</a></li>
+      <li class="nav-item"><a href="story.html" class="nav-link" >History</a></li>
       <li class="nav-item"><a href="members.html" class="nav-link">Members</a></li>
 
     </ul>
