--- a/members.html
+++ b/members.html
@@ -6,16 +6,16 @@
     <title>Alash Members</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="old-paper">
+<body style="background-color: #1a1a1a;">
     <header class="header">
         <div class="header-row">
           <div class="header-col">
-            <h1 class="blog-header-logo">Alash</h1>
+            <h1 class="blog-header-logo">ALASH</h1>
           </div>
         </div>
         <ul class="nav">
         <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="story.html" class="nav-link" >History</a></li>
+          <li class="nav-item"><a href="history.html" class="nav-link" >History</a></li>
 
           <li class="nav-item"><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
@@ -23,15 +23,175 @@
       <div>
         <div class="team-review">
             <div class="team-member-review">
-                <img class="team-member-review-image" src="./assets/bokeyhan.png">
+                <img class="team-member-review-image"  src="./assets/bokeyhan.png">
+                <p>Alihan Bokeikhan – The Political Leader of Alash.</p>
             </div>
             <div class="team-member-review">
-                <img class="team-member-review-image" src="./assets/baitursunuly.jpg">
+                <img class="team-member-review-image"  src="./assets/baitursunuly.jpg">
+                <p>Ahmet Baitursynov – The Spiritual Leader of Alash.</p>
             </div>
             <div class="team-member-review">
                 <img class="team-member-review-image" src="./assets/dulatuly.png">
+                <p>Mirjaqip Dulatuly – The Ideologist of Alash.</p>
+            </div>
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/134px-Magjan.png">
+                <p>Magzhan Zhumabayev – The Poet and Cultural Leader of Alash</p>
+            </div>
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/130px-Aymawtov.png">
+                <p>Jusipbek Aimauytov – The Educator and Writer of Alash</p>
+            </div>
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/116px.png">
+                <p>Khalel Dosmukhamedov – The Doctor and Public Figure of Alash.</p>
+            </div>
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/124px-Tynyshpaev_inzhener.png">
+                <p>Mukhametjan Tynyshbaev – The Legal Scholar of Alash.</p>
+            </div>
+            
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/135px-Жанша_Досмухамедов,_1920.png">
+                <p>Jahansha Dosmukhamedov – The Military Leader of Alash</p>
+            </div>
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/137px.png">
+                <p>Sanjar Asfendiyarov – The Publicist and Educator of Alash. </p>
+            </div>
+            <div class="team-member-review">
+                <img class="team-member-review-image" src="./assets/120px.png">
+                <p>Nazir Torekulov – The Historian and Cultural Figure of Alash.</p>
             </div>
         </div>
-      </div>
+
+        <div class="team ">
+            <div class="team-member" style="background: linear-gradient(to right, #3A2D28, #1C1C1C, #3A2D28);">
+                <div class="slideshow">
+                    <img class=" slide" src="./assets/bokeyhan.png" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;" alt="Image 1">
+                    <img class=" slide " src="./assets/bokeyhan2.jpg" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;" alt="Image 2">
+                    <img class=" slide" src="./assets/bokeyhan3.jpg" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;" alt="Image 3">
+                  </div>
+                <p style="color: white; font-size: large;">
+                    Alikhan Bokeykhan (1866–1937) was a prominent Kazakh political figure, journalist, and leader of the Alash movement, which sought to promote Kazakh autonomy within the Russian Empire and later the Soviet Union. He played a key role in the cultural and political awakening of the Kazakh people during the late 19th and early 20th centuries.<br><br>Early Life and Education<br>
+                    Alikhan was born in Semey Oblast (modern-day Kazakhstan) in a noble family of the Argyn tribe. He studied in local schools before attending the Omsk Technical School. Later, he studied forestry and law at the Imperial Forest Institute in Saint Petersburg, where he was influenced by liberal and nationalist ideas.
+                    <br><br>
+                    Political and Intellectual Contributions<br>
+                    Leader of the Alash Orda: Bokeykhan was a central figure in the Alash Orda government (1917–1920), which sought to establish autonomy for the Kazakh people during the turbulent period of the Russian Revolution and Civil War.
+                    <br>Advocate for Kazakh Autonomy: He pushed for reforms in land ownership, education, and governance to preserve Kazakh culture and identity.
+                    <br>Journalism and Writing: Alikhan edited and contributed to newspapers like Kazakh, using them to promote Kazakh national consciousness and discuss issues like land reform, culture, and language.
+                    <br><br>
+                    Legacy and Persecution<br>
+                    Bokeykhan’s efforts were instrumental in the rise of Kazakh nationalism, but his moderate stance conflicted with the Soviet authorities' goals of centralization and collectivization.
+                    <br>He was arrested multiple times during the Soviet regime and executed in 1937 during Stalin's Great Purge.</p>
+              </div>
+                <!-- <img class="team-member-image" src="./assets/bokeyhan.png" style="border-top-right-radius: 15px;   
+  border-bottom-right-radius: 15px;"> -->
+                <p style="color: white; font-size: large;">here</p>
+            </div>
+            <!-- <div style="height:50px; background: linear-gradient(to bottom, #3A2D28, #A48374);    "></div> -->
+            <div class="team-member" style="background:  linear-gradient(to right, #5F473F, #3C2F2A, #5F473F);">
+                <p style="color: white; font-size: large;">
+                    Akhmet Baitursynuly was a prominent Kazakh intellectual, linguist, poet, educator, and political figure. He is best known for his contributions to Kazakh literature, education, and national identity. He was a key member of the Alash Orda movement, which sought autonomy for the Kazakh people during the early 20th century. His work has left a lasting impact on Kazakh culture, particularly in the areas of language and education.
+<br><br>
+Early Life and Education<br>
+Baitursynuly was born in the Torgai region (modern-day Kostanay Region, Kazakhstan). He came from a noble family and showed a keen interest in learning from a young age. He received his early education at a local madrasa and later attended a Russian-Kazakh school. His exposure to both traditional Kazakh and Russian education influenced his later work in linguistics and reform.
+<br><br>
+Key Contributions<br>
+1. Linguistic Reforms<br>
+2. Education and Pedagogy<br>
+3. Literary and Cultural Work<br>
+4. Political Activism<br>
+As a leader of the Alash Orda movement, Baitursynuly fought for Kazakh autonomy and the preservation of Kazakh culture during the turbulent period of the Russian Revolution and Civil War.
+He advocated for land rights and resistance to the forced collectivization policies of the Soviet regime.
+Persecution and Death
+Despite his contributions, Baitursynuly was targeted by the Soviet government for his nationalist views and opposition to Soviet policies. He was arrested multiple times and ultimately executed in 1937 during Stalin's Great Purge. His death marked the loss of one of Kazakhstan's greatest intellectuals.
+
+
+
+
+                </p>
+                <div class="slideshow">
+                    <img class=" slide" src="./assets/baitursunuly.jpg" style="border-top-left-radius: 15px;   
+  border-bottom-left-radius: 15px;" alt="Image 1">
+                    <img class=" slide " src="./assets/baitursynuly2.png" style="border-top-left-radius: 15px;   
+  border-bottom-left-radius: 15px;" alt="Image 2">
+                    <img class=" slide" src="./assets/baitursunuly3.jpg" style="border-top-left-radius: 15px;   
+  border-bottom-left-radius: 15px;" alt="Image 3">
+                  </div>
+              </div>
+                <!-- <img class="team-member-image" src="./assets/baitursunuly.jpg" style="border-top-left-radius: 15px;   
+  border-bottom-left-radius: 15px;"> -->
+
+            </div>
+            <!-- <div style="height:50px; background: linear-gradient(to bottom, #A48374, #CBAD8D);"></div> -->
+            <div class="team-member" style="background:linear-gradient(to right, #CBAD8D, #8A7F66, #CBAD8D);">
+
+                <!-- <img class="team-member-image" src="./assets/dulatuly.png" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;"> -->
+                <div class="slideshow">
+                    <img class=" slide" src="./assets/dulatuly.png" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;" alt="Image 1">
+                    <img class=" slide " src="./assets/dulatuly2.jpg" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;" alt="Image 2">
+                    <img class=" slide" src="./assets/dulatuly3.png" style="border-top-right-radius: 15px;   
+                    border-bottom-right-radius: 15px;" alt="Image 3">
+                </div>
+                <p style="color: white; font-size: large;">
+                    Mirzhakyp Dulatov (1885–1935)<br>
+Mirzhakyp Dulatov was a prominent Kazakh writer, poet, educator, and political activist. He was a central figure in the Alash Orda movement, advocating for Kazakh autonomy, cultural preservation, and social reform during a period of significant political and cultural upheaval in Central Asia.
+<br><br>
+Early Life and Education<br>
+Dulatov was born in the Torghai region (now in modern-day Kazakhstan) to a family of modest means. He lost his parents at a young age and was raised by relatives. Despite these hardships, he received an education at a local madrasa and a Russian-Kazakh school, where he was exposed to both traditional Kazakh values and modern ideas.
+   <br> <br>             
+Legacy<br> 
+Cultural Icon: Dulatov is celebrated as one of the key figures of the Kazakh intellectual renaissance of the early 20th century.<br> 
+Literary Pioneer: His works laid the foundation for modern Kazakh literature, blending political activism with artistic expression.<br> 
+Symbol of Resistance: He is remembered as a courageous advocate for Kazakh identity and cultural independence in the face of colonial oppression.
+</p>
+                </div>
+
+            </div>
+            <!-- <div style="height:50px; width:1000px; background: linear-gradient(to bottom, #CBAD8D, white);    "></div> -->
+        </div>
+        
+        <!-- <div class="slideshow">
+            <img src="./assets/bokeyhan.png" alt="Image 1" class="slide">
+            <img src="./assets/baitursunuly.jpg" alt="Image 2" class="slide">
+            <img src="./assets/dulatuly.png" alt="Image 3" class="slide">
+          </div>
+      </div> -->
+
 </body>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-section">
+            <h4>Bilim ushin</h4>
+            <p>We encourage to learn and fight for our country</p>
+        </div>
+        <div class="footer-section">
+            <h4>Editors </h4>
+            <ul>
+                <li><a href="#">Akhmet Baitursynov</a></li>
+                <li><a href="#">Alikhan Bokeykhan</a></li>
+                <li><a href="#">Mirzhakyp Dulatuly</a></li>
+            </ul>
+        </div>
+        <!-- <div class="footer-section">
+            <h4>Follow Us</h4>
+            <div class="social-links">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+            </div>
+        </div> -->
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 1919 QAZAQ GAZETI</p>
+    </div>
+</footer>
+<script src="index.js"></script>
 </html>
